<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">
    <com.rokid.glass.presentationdemo.glass.view.RecgCrossView android:layout_width="@dimen/d_smart_recog_rect_width"
        android:layout_height="@dimen/d_smart_recog_rect_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:id="@+id/iv_cross_rect"/>
    <com.rokid.glass.presentationdemo.glass.view.RoiRect android:layout_width="@dimen/d_smart_recog_rect_width"
        android:layout_height="@dimen/d_smart_recog_rect_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:id="@+id/iv_roi_rect"/>
    <View
        android:layout_width="@dimen/d_smart_recog_rect_width"
        android:layout_height="@dimen/d_smart_recog_rect_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:id="@+id/iv_seat_rect"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deploy_single_face_and_plate"
        android:textSize="18dp"
        android:id="@+id/tv_recog"
        app:layout_constraintLeft_toLeftOf="@id/iv_seat_rect"
        app:layout_constraintRight_toRightOf="@id/iv_seat_rect"
        app:layout_constraintBottom_toTopOf="@id/iv_seat_rect"
        app:layout_constraintTop_toTopOf="@id/iv_seat_rect"
        android:textColor="#7fffffff" />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/s_recoging"
        app:layout_constraintTop_toTopOf="@+id/iv_seat_rect"
        app:layout_constraintLeft_toRightOf="@+id/iv_seat_rect"
        android:layout_marginTop="45dp"
        android:textColor="#ffffff"
        android:visibility="gone"
        android:id="@+id/tv_recognition"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/iv_seat_rect"
        app:layout_constraintLeft_toRightOf="@+id/iv_seat_rect"
        android:layout_marginTop="85dp"
        android:text="@string/s_recog_base_pose"
        android:textColor="#FF560B"
        android:textSize="21dp"
        android:id="@+id/tv_bad_face"
        android:visibility="gone"
        />
    <ImageView android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/iv_crop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="176dp"
        android:layout_marginBottom="135dp"
        android:visibility="gone"
        />

    <ImageView android:layout_width="150dp"
        android:layout_height="35dp"
        android:src="@mipmap/ic_scan"
        android:id="@+id/iv_scan"
        app:layout_constraintLeft_toLeftOf="@+id/iv_crop"
        app:layout_constraintRight_toRightOf="@+id/iv_crop"
        app:layout_constraintTop_toTopOf="@+id/iv_crop" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="365dp"
        android:layout_height="148dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/cl_user_info"
        android:layout_marginTop="70dp"
        android:visibility="gone"
        android:animateLayoutChanges="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="365dp"
            android:layout_height="125dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@mipmap/bg_user_info"
            android:id="@+id/cl_user_infos">
            <ImageView android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/iv_head"/>
            <TextView android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Text.NormalLight"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17.5dp"
                app:layout_constraintLeft_toRightOf="@+id/iv_head"
                android:id="@+id/tv_name"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginLeft="11dp" />
            <TextView android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Text.Small"
                android:singleLine="true"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintLeft_toRightOf="@+id/iv_head"
                android:layout_marginTop="9dp"
                android:id="@+id/tv_card_num"
                android:layout_marginLeft="11dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Text.Small"
                android:singleLine="true"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_num"
                app:layout_constraintLeft_toRightOf="@+id/iv_head"
                android:layout_marginTop="9dp"
                android:id="@+id/tv_place"
                android:layout_marginLeft="11dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/cl_user_infos"
            app:layout_constraintBottom_toTopOf="@+id/cl_user_infos"
            app:layout_constraintLeft_toLeftOf="@id/cl_user_infos"
            app:layout_constraintRight_toRightOf="@id/cl_user_infos"
            android:id="@+id/tv_tag"
            android:text="@string/s_tag_title"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="#5A2AFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#000000"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView android:layout_width="250dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp"
        android:background="@mipmap/btn_retry"
        android:gravity="center"
        style="@style/Text.NormalLight"
        android:id="@+id/tv_retry"
        android:visibility="gone"
        android:text="@string/s_continue_recog"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="217dp"
        android:visibility="gone"
        android:id="@+id/cl_new_friend">

        <ImageView
            android:id="@+id/iv_pass"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:src="@mipmap/icon_pass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_pass"
            android:textSize="25dp"
            android:layout_marginLeft="16dp"
            android:text="@string/s_recog_done"
            android:textColor="#ffffff"
            android:id="@+id/tv_pass1"/>
        <TextView android:id="@+id/tv_pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_pass1"
            app:layout_constraintLeft_toRightOf="@+id/iv_pass"
            android:layout_marginTop="20dp"
            android:text="@string/s_new_friend"
            android:textSize="21dp"
            android:layout_marginLeft="16dp"
            android:textColor="#ffffff"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="57dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/cl_plate">
        <ImageView android:layout_width="225dp"
            android:layout_height="160dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@mipmap/bg_plate"
            android:id="@+id/iv_plate_bg"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            style="@style/Text.LargerLight"
            android:gravity="center"
            android:id="@+id/tv_plate" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.NormalLight"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_plate"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv_num"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_num"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Text.SmallDark"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_addr"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>